add mongo email read model

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,3 +15,7 @@ leveldb.persistence.journal {
   native = on
   checksum = off
 }
+
+play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
+
+mongodb.uri = "mongodb://localhost:27017/bit-spam-db"
