implement mail sending service

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,6 +3,13 @@ zoho {
   authToken = "1b68dd5be8ed73001491a00fe96923d9"
 }
 
+smtp {
+  address = "noreply.knbit@gmail.com"
+  password = "Alamakota123"
+  host = "smtp.gmail.com"
+  port = 587
+}
+
 akka.persistence {
   journal.plugin = "leveldb.persistence.journal"
   snapshot-store.local.dir = "target/persistence/snapshots"
