--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,6 +23,29 @@ leveldb.persistence.journal {
   checksum = off
 }
 
+play.filters.cors {
+  # The path prefixes to filter.
+  pathPrefixes = ["/", "/mails"]
+
+  # The allowed origins. If null, all origins are allowed.
+  allowedOrigins = null
+
+  # The allowed HTTP methods. If null, all methods are allowed
+  allowedHttpMethods = null
+
+  # The allowed HTTP headers. If null, all headers are allowed.
+  allowedHttpHeaders = null
+
+  # The exposed headers
+  exposedHeaders = []
+
+  # Whether to support credentials
+  supportsCredentials = true
+
+  # The maximum amount of time the CORS meta data should be cached by the client
+  preflightMaxAge = 1 hour
+}
+
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 
 mongodb.uri = "mongodb://localhost:27017/bit-spam-db"
